--- a/practice project/firebase-practice-project/src/app/modules/user/products/products.component.html
+++ b/practice project/firebase-practice-project/src/app/modules/user/products/products.component.html
@@ -1,1 +1,115 @@
 <p>products works!</p>
+
+<span
+  ><a routerLink="../products" fragment="intro" (click)="jumpTo('intro')"
+    >Introduction
+  </a>
+  <a routerLink="/products" fragment="detail" (click)="jumpTo('detail')"
+    >Details
+  </a>
+  <a routerLink="../products" fragment="benefit" (click)="jumpTo('benefit')"
+    >Benefits
+  </a></span
+>
+
+<div class="container">
+  <h1 id="intro">Introduction</h1>
+  <p>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus quod
+    officia doloremque, eveniet officiis velit, natus, adipisci ea facere eaque
+    quibusdam numquam error. Repellat consequuntur, minima atque adipisci fugit
+    quis deleniti voluptatibus laborum ad accusamus, placeat tempora quam
+    cupiditate quibusdam nihil velit vero necessitatibus obcaecati odio,
+    doloribus laboriosam possimus? Explicabo illum, consectetur iure placeat sed
+    itaque. Soluta modi molestiae dolorum veritatis perferendis debitis
+    quibusdam obcaecati vero, libero tenetur quod aliquid quam adipisci odit,
+    quidem cupiditate accusantium iste nesciunt placeat enim repudiandae?
+    Adipisci tenetur animi illo quam doloremque magni corporis incidunt. Lorem
+    ipsum dolor sit amet consectetur, adipisicing elit. Accusamus quod officia
+    doloremque, eveniet officiis velit, natus, adipisci ea facere eaque
+    quibusdam numquam error. Repellat consequuntur, minima atque adipisci fugit
+    quis deleniti voluptatibus laborum ad accusamus, placeat tempora quam
+    cupiditate quibusdam nihil velit vero necessitatibus obcaecati odio,
+    doloribus laboriosam possimus? Explicabo illum, consectetur iure placeat sed
+    itaque. Soluta modi molestiae dolorum veritatis perferendis debitis
+    quibusdam obcaecati vero, libero tenetur quod aliquid quam adipisci odit,
+    quidem cupiditate accusantium iste nesciunt placeat enim repudiandae?
+    Adipisci tenetur animi illo quam doloremque magni corporis incidunt. Lorem
+    ipsum dolor sit amet consectetur, adipisicing elit. Accusamus quod officia
+    doloremque, eveniet officiis velit, natus, adipisci ea facere eaque
+    quibusdam numquam error. Repellat consequuntur, minima atque adipisci fugit
+    quis deleniti voluptatibus laborum ad accusamus, placeat tempora quam
+    cupiditate quibusdam nihil velit vero necessitatibus obcaecati odio,
+    doloribus laboriosam possimus? Explicabo illum, consectetur iure placeat sed
+    itaque. Soluta modi molestiae dolorum veritatis perferendis debitis
+    quibusdam obcaecati vero, libero tenetur quod aliquid quam adipisci odit,
+    quidem cupiditate accusantium iste nesciunt placeat enim repudiandae?
+    Adipisci tenetur animi illo quam doloremque magni corporis incidunt.
+  </p>
+  <h1 id="detail">Details</h1>
+  <p>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus quod
+    officia doloremque, eveniet officiis velit, natus, adipisci ea facere eaque
+    quibusdam numquam error. Repellat consequuntur, minima atque adipisci fugit
+    quis deleniti voluptatibus laborum ad accusamus, placeat tempora quam
+    cupiditate quibusdam nihil velit vero necessitatibus obcaecati odio,
+    doloribus laboriosam possimus? Explicabo illum, consectetur iure placeat sed
+    itaque. Soluta modi molestiae dolorum veritatis perferendis debitis
+    quibusdam obcaecati vero, libero tenetur quod aliquid quam adipisci odit,
+    quidem cupiditate accusantium iste nesciunt placeat enim repudiandae?
+    Adipisci tenetur animi illo quam doloremque magni corporis incidunt. Lorem
+    ipsum dolor sit amet consectetur, adipisicing elit. Accusamus quod officia
+    doloremque, eveniet officiis velit, natus, adipisci ea facere eaque
+    quibusdam numquam error. Repellat consequuntur, minima atque adipisci fugit
+    quis deleniti voluptatibus laborum ad accusamus, placeat tempora quam
+    cupiditate quibusdam nihil velit vero necessitatibus obcaecati odio,
+    doloribus laboriosam possimus? Explicabo illum, consectetur iure placeat sed
+    itaque. Soluta modi molestiae dolorum veritatis perferendis debitis
+    quibusdam obcaecati vero, libero tenetur quod aliquid quam adipisci odit,
+    quidem cupiditate accusantium iste nesciunt placeat enim repudiandae?
+    Adipisci tenetur animi illo quam doloremque magni corporis incidunt. Lorem
+    ipsum dolor sit amet consectetur, adipisicing elit. Accusamus quod officia
+    doloremque, eveniet officiis velit, natus, adipisci ea facere eaque
+    quibusdam numquam error. Repellat consequuntur, minima atque adipisci fugit
+    quis deleniti voluptatibus laborum ad accusamus, placeat tempora quam
+    cupiditate quibusdam nihil velit vero necessitatibus obcaecati odio,
+    doloribus laboriosam possimus? Explicabo illum, consectetur iure placeat sed
+    itaque. Soluta modi molestiae dolorum veritatis perferendis debitis
+    quibusdam obcaecati vero, libero tenetur quod aliquid quam adipisci odit,
+    quidem cupiditate accusantium iste nesciunt placeat enim repudiandae?
+    Adipisci tenetur animi illo quam doloremque magni corporis incidunt.
+  </p>
+  <h1 id="benefit">Benefits</h1>
+  <p>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus quod
+    officia doloremque, eveniet officiis velit, natus, adipisci ea facere eaque
+    quibusdam numquam error. Repellat consequuntur, minima atque adipisci fugit
+    quis deleniti voluptatibus laborum ad accusamus, placeat tempora quam
+    cupiditate quibusdam nihil velit vero necessitatibus obcaecati odio,
+    doloribus laboriosam possimus? Explicabo illum, consectetur iure placeat sed
+    itaque. Soluta modi molestiae dolorum veritatis perferendis debitis
+    quibusdam obcaecati vero, libero tenetur quod aliquid quam adipisci odit,
+    quidem cupiditate accusantium iste nesciunt placeat enim repudiandae?
+    Adipisci tenetur animi illo quam doloremque magni corporis incidunt.Lorem
+    ipsum dolor sit amet consectetur, adipisicing elit. Accusamus quod officia
+    doloremque, eveniet officiis velit, natus, adipisci ea facere eaque
+    quibusdam numquam error. Repellat consequuntur, minima atque adipisci fugit
+    quis deleniti voluptatibus laborum ad accusamus, placeat tempora quam
+    cupiditate quibusdam nihil velit vero necessitatibus obcaecati odio,
+    doloribus laboriosam possimus? Explicabo illum, consectetur iure placeat sed
+    itaque. Soluta modi molestiae dolorum veritatis perferendis debitis
+    quibusdam obcaecati vero, libero tenetur quod aliquid quam adipisci odit,
+    quidem cupiditate accusantium iste nesciunt placeat enim repudiandae?
+    Adipisci tenetur animi illo quam doloremque magni corporis incidunt. Lorem
+    ipsum dolor sit amet consectetur, adipisicing elit. Accusamus quod officia
+    doloremque, eveniet officiis velit, natus, adipisci ea facere eaque
+    quibusdam numquam error. Repellat consequuntur, minima atque adipisci fugit
+    quis deleniti voluptatibus laborum ad accusamus, placeat tempora quam
+    cupiditate quibusdam nihil velit vero necessitatibus obcaecati odio,
+    doloribus laboriosam possimus? Explicabo illum, consectetur iure placeat sed
+    itaque. Soluta modi molestiae dolorum veritatis perferendis debitis
+    quibusdam obcaecati vero, libero tenetur quod aliquid quam adipisci odit,
+    quidem cupiditate accusantium iste nesciunt placeat enim repudiandae?
+    Adipisci tenetur animi illo quam doloremque magni corporis incidunt. df
+  </p>
+</div>
