--- a/practice project/rxjs-practice-project/src/app/app.component.html
+++ b/practice project/rxjs-practice-project/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <!-- interval and timer -->
 <!-- <app-interval></app-interval> -->
 
@@ -22,3 +21,25 @@
 <!-- pluck -->
 <!-- pluck - object me data ki property ko access karta he same as map but short syntex -->
 <!-- <app-pluck></app-pluck> -->
+
+<!-- switchAll -->
+<!-- from ke andar array he usko ham map k through log karvate he to vo observable return karta he not value -->
+<!-- or switchAll k sath map ka use karenge to vo value return karega naki observable -->
+<!-- or e kam ham sif switchMap se bhi kar sakte he -->
+<!-- <app-switch-all></app-switch-all> -->
+
+<!-- switchMap -->
+<!-- search Functionality by switchMap e ham concatMap se bhi kar sakte he 
+lekin usme agar hamne ek bar ku6 likha or turant remove kar diya to vo dono hi request server par bhegta he 
+lekin agar ham switchMap use kare to usme last request cancle ho jayegi -->
+<!-- <app-switch-map></app-switch-map> -->
+
+<!-- debounceTime -->
+<!-- debounceTime - usme ham time dete he argument me or utne time k bad hi hamne jo type kiya he uspe keyup karenge to value emit hogi
+like - sid
+result - s, si, sid
+in debounceTime sid after time which we will give in debounceTime argument
+
+distinctUntilChanged - usme ham pargati type karte he or last me galtii se ii type ho gaya to ham use clear karge 
+    to vapis te pragati ban gya to e same name he to request fir se nahi jayegi -->
+<app-debounce-time></app-debounce-time>
