--- a/practice project/firebase-practice-project/src/app/modules/user/products/products.component.html
+++ b/practice project/firebase-practice-project/src/app/modules/user/products/products.component.html
@@ -125,6 +125,7 @@
     </div>
   </div>
 
+  <h1 id="edit"></h1>
   <form [formGroup]="uploadForm" (ngSubmit)="uploadFile()">
     <div class="form-group">
       <input
@@ -133,13 +134,23 @@
         formControlName="title"
         class="form-control"
       />
-      <div class="text-danger" *ngIf="uploadForm.controls['title'].touched && uploadForm.controls['title'].invalid">
-      <div *ngIf="uploadForm.controls['title'].errors?.['required']">title is required</div>
-      <div *ngIf="uploadForm.controls['title'].errors?.['minlength']">title must be atleast 3 char</div>
-    </div>
+      <div
+        class="text-danger"
+        *ngIf="
+          uploadForm.controls['title'].touched &&
+          uploadForm.controls['title'].invalid
+        "
+      >
+        <div *ngIf="uploadForm.controls['title'].errors?.['required']">
+          title is required
+        </div>
+        <div *ngIf="uploadForm.controls['title'].errors?.['minlength']">
+          title must be atleast 3 char
+        </div>
+      </div>
     </div>
 
-    <input type="file" class="mt-4" (change)="storeFile($event)">
+    <input type="file" class="mt-4" (change)="storeFile($event)" />
     <button class="btn btn-primary">Submit</button>
   </form>
 
@@ -149,12 +160,19 @@
       <th>FileName</th>
       <th>Title</th>
       <th>Url</th>
+      <th>Actions</th>
     </thead>
-    <tbody *ngFor=" let product of products">
+    <tbody *ngFor="let product of products">
       <td>{{ product.displayName }}</td>
       <td>{{ product.fileName }}</td>
       <td>{{ product.title }}</td>
-      <td><img width="100" height="100" src="{{ product.url }}"></td>
-    </tbody>
+      <td><img width="100" height="100" src="{{ product.url }}" /></td>
+      <td>
+        <button class="btn-dark me-2" (click)="onEdit(product)"><a routerLink="../products" fragment="edit" (click)="jumpTo('edit')"
+          >Edit
+        </a></button>
+        <button class="btn-dark" (click)="onDelete(product)">Delete</button>
+      </td>
+    </tbody>  
   </table>
 </div>
