mergeAll, mergeMap, switchAll, switchMap, share explore this operators

--- a/practice project/rxjs-practice-project/src/app/app.component.html
+++ b/practice project/rxjs-practice-project/src/app/app.component.html
@@ -42,4 +42,13 @@ in debounceTime sid after time which we will give in debounceTime argument
 
 distinctUntilChanged - usme ham pargati type karte he or last me galtii se ii type ho gaya to ham use clear karge 
     to vapis te pragati ban gya to e same name he to request fir se nahi jayegi -->
-<app-debounce-time></app-debounce-time>
+<!-- <app-debounce-time></app-debounce-time> -->
+
+<!-- mergeMap and mergeAll -->
+<!-- map me ham koi observale pass kare to vo observable hi return karta he and use hame ek or bar subscribe karna padta he
+map k sath mergeAll ka use kare to vo sahi output return karta he and mergeAll subcribe ka kam karta he
+mergeMap ka use kare ham map and mergeAll ki jagah pe to ue bhi sahi output return karta he -->
+<!-- <app-merge-map-practice></app-merge-map-practice> -->
+
+
+<app-share-practice></app-share-practice>
