--- a/HRMS/src/app/modules/master/designation/designation-add/designation-list/designation-list.component.html
+++ b/HRMS/src/app/modules/master/designation/designation-add/designation-list/designation-list.component.html
@@ -1,8 +1,15 @@
 <div class="container">
   <!-- designation list table -->
   <h3 class="text-center">
-    Designation List
-    <span class="form-switch mt-2" (click)="filterStatus()"
+    Designation List - 
+    <label for="designnation">Filter by status:</label>
+
+    <select name="designnation" (change)="getDropDowmValue($event)">
+      <option value="all">All</option>
+      <option value="true">Active</option>
+      <option value="false">Inactive</option>
+    </select>
+    <!-- <span class="form-switch mt-2" (click)="filterStatus()"
       ><h1><fa-icon
         *ngIf="isStatus"
         (click)="isStatus = false"
@@ -15,7 +22,7 @@
         class="blue-color"
         [icon]="faToggleOff"
       ></fa-icon></h1>
-    </span>
+    </span> -->
   </h3>
   <table class="table">
     <thead>
@@ -39,7 +46,7 @@
         <th>Actions</th>
       </tr>
       <!-- if no data then show this -->
-      <tr *ngIf="!_designationService.designations || isNoData">
+      <tr *ngIf="!designationService.designations || isNoData">
         <td colspan="3" class="text-center">Data not found</td>
       </tr>
     </thead>
@@ -47,7 +54,7 @@
     <!-- loop for add designation in table -->
     <tbody
       *ngFor="
-        let designation of this._designationService.designations | statusFilter : isStatus
+        let designation of designationService.designations | statusFilter : isStatus
           | paginate: { itemsPerPage: rowPerPage, currentPage: p }
       "
     >
@@ -88,7 +95,7 @@
       </tr>
     </tbody>
   </table>
-  <div class="input-group justify-content-end" *ngIf="_designationService.designations && !isNoData">
+  <div class="input-group justify-content-end" *ngIf="designationService.designations && !isNoData">
     <select class="custom-select mb-3" (change)="SetRowPerPage($event)">
       <option value="4">4</option>
       <option value="8">8</option>
