--- a/HRMS/src/app/modules/master/external-designation/external-designation-add/external-designation-list/external-designation-list.component.html
+++ b/HRMS/src/app/modules/master/external-designation/external-designation-add/external-designation-list/external-designation-list.component.html
@@ -1,8 +1,15 @@
 <div class="container">
   <!-- externalDesignation list table -->
   <h3 class="text-center">
-    Designation List
-    <span class="form-switch mt-2"
+    External Designation List -
+    <label for="designnation">Filter by status:</label>
+
+    <select name="designnation" (change)="getDropDowmValue($event)">
+      <option value="all">All</option>
+      <option value="true">Active</option>
+      <option value="false">Inactive</option>
+    </select>
+    <!-- <span class="form-switch mt-2"
       ><h1><fa-icon
         *ngIf="isStatus"
         (click)="isStatus = false"
@@ -15,18 +22,32 @@
         class="blue-color"
         [icon]="faToggleOff"
       ></fa-icon></h1>
-    </span>
+    </span> -->
   </h3>
   <table class="table">
     <thead>
       <tr>
-        <th>Title</th>
+        <th (click)="onSort()">
+          Title
+          <fa-icon
+            *ngIf="!isUp"
+            (click)="isUp = true"
+            class="blue-color"
+            [icon]="faArrowUp"
+          ></fa-icon>
+          <fa-icon
+            *ngIf="isUp"
+            class="blue-color"
+            (click)="isUp = false"
+            [icon]="faArrowDown"
+          ></fa-icon>
+        </th>
         <th>Status</th>
         <th>Actions</th>
       </tr>
 
       <!-- if no data then show this -->
-      <tr *ngIf="!_externalDesignationService.externalDesignations || isNoData">
+      <tr *ngIf="!externalDesignationService.externalDesignations || isNoData">
         <td colspan="3" class="text-center">Data not found</td>
       </tr>
     </thead>
@@ -34,13 +55,14 @@
     <!-- loop for designation list in table -->
     <tbody
       *ngFor="
-        let designation of _externalDesignationService.externalDesignations | statusFilter : isStatus
-        | paginate: { itemsPerPage: rowPerPage, currentPage: p }
+        let designation of externalDesignationService.externalDesignations
+          | statusFilter: isStatus
+          | paginate: { itemsPerPage: rowPerPage, currentPage: p }
       "
     >
-      <tr *ngIf="isStatus == designation.status">
+      <tr>
         <td>{{ designation.title }}</td>
-        <td >
+        <td>
           <h1 (click)="onChangeStatus(designation)">
             <!-- icons for status true and false -->
             <fa-icon
@@ -73,7 +95,10 @@
       </tr>
     </tbody>
   </table>
-  <div class="input-group justify-content-end" *ngIf="_externalDesignationService.externalDesignations && !isNoData">
+  <div
+    class="input-group justify-content-end"
+    *ngIf="externalDesignationService.externalDesignations && !isNoData"
+  >
     <select class="custom-select mb-3" (change)="SetRowPerPage($event)">
       <option value="4">4</option>
       <option value="8">8</option>
