--- a/practice project/Shop4Less/src/app/modules/products/create-product/create-product.component.html
+++ b/practice project/Shop4Less/src/app/modules/products/create-product/create-product.component.html
@@ -11,6 +11,9 @@
         id="name"
         placeholder="Product Name"
       />
+      <small class="text-danger" *ngIf="(isFormSubmitted || _addProductForm['productName'].touched) && _addProductForm['productName'].invalid">
+        <small *ngIf="_addProductForm['productName'].errors?.['required']">Product Name is required</small>
+      </small>
     </div>
     <div class="col-md-6 mb-3">
       <label for="id">Category Id</label>
@@ -21,6 +24,9 @@
         id="id"
         placeholder="Category Id"
       />
+      <small class="text-danger" *ngIf="(isFormSubmitted || _addProductForm['categoryId'].touched) && _addProductForm['productName'].invalid">
+        <small *ngIf="_addProductForm['categoryId'].errors?.['required']">Product Name is required</small>
+      </small>
     </div>
   </div>
   <div class="form-row">
@@ -33,6 +39,9 @@
         id="description"
         placeholder="Description"
       ></textarea>
+      <small class="text-danger" *ngIf="(isFormSubmitted || _addProductForm['description'].touched) && _addProductForm['productName'].invalid">
+        <small *ngIf="_addProductForm['description'].errors?.['required']">Product Name is required</small>
+      </small>
     </div>
     <div class="col-md-6 mb-3">
       <label for="rating">Rating</label>
@@ -41,13 +50,15 @@
         class="custom-select form-control"
         id="rating"
       >
-        <option selected>Choose...</option>
         <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
         <option value="5">5</option>
       </select>
+      <small class="text-danger" *ngIf="(isFormSubmitted || _addProductForm['rating'].touched) && _addProductForm['productName'].invalid">
+        <small *ngIf="_addProductForm['rating'].errors?.['required']">Product Name is required</small>
+      </small>
     </div>
   </div>
   <div class="form-row">
@@ -60,6 +71,9 @@
         id="color"
         placeholder="Product Color"
       />
+      <small class="text-danger" *ngIf="(isFormSubmitted || _addProductForm['productColor'].touched) && _addProductForm['productName'].invalid">
+        <small *ngIf="_addProductForm['productColor'].errors?.['required']">Product Name is required</small>
+      </small>
     </div>
     <div class="col-md-6 mb-3">
       <label for="isAvailable">IsAvailable</label>
@@ -68,10 +82,12 @@
         class="custom-select form-control"
         id="isAvailable"
       >
-        <option selected>Choose...</option>
         <option value="true">yes</option>
         <option value="false">no</option>
       </select>
+      <small class="text-danger" *ngIf="(isFormSubmitted || _addProductForm['isAvailable'].touched) && _addProductForm['productName'].invalid">
+        <small *ngIf="_addProductForm['isAvailable'].errors?.['required']">Product Name is required</small>
+      </small>
     </div>
   </div>
   <div class="form-row">
@@ -84,6 +100,9 @@
         id="price"
         placeholder="Product Price"
       />
+      <small class="text-danger" *ngIf="(isFormSubmitted || _addProductForm['productPrice'].touched) && _addProductForm['productName'].invalid">
+        <small *ngIf="_addProductForm['productPrice'].errors?.['required']">Product Name is required</small>
+      </small>
     </div>
     <div class="col-md-6 mb-3">
       <label for="review">Review</label>
@@ -92,13 +111,15 @@
         class="custom-select form-control"
         id="review"
       >
-        <option selected>Choose...</option>
         <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
         <option value="5">5</option>
       </select>
+      <small class="text-danger" *ngIf="(isFormSubmitted || _addProductForm['review'].touched) && _addProductForm['productName'].invalid">
+        <small *ngIf="_addProductForm['review'].errors?.['required']">Product Name is required</small>
+      </small>
     </div>
   </div>
   <button type="submit" (click)="onSubmit()" class="btn btn-primary">
