--- a/practice project/Food-App/src/app/modules/user/list-product/list-product.component.html
+++ b/practice project/Food-App/src/app/modules/user/list-product/list-product.component.html
@@ -20,7 +20,7 @@
     <td>{{ product.productLotSize }}</td>
     <td>{{ product.productDescription }}</td>
     <td>
-      <button class="btn btn-dark" [ngStyle]="{color : 'black'}" (click)="onView(product)">View</button>
+      <!-- <button class="btn btn-dark" [ngStyle]="{color : 'black'}" (click)="onView(product)">View</button> -->
       <button class="btn btn-dark" [ngStyle]="{color : 'black'}" (click)="onDelete(product)">Delete</button>
       <button class="btn btn-dark" [ngStyle]="{color : 'black'}" (click)="onEdit(product)">Edit</button>
     </td>
